docs: Decision Steward role + v0.2 visibility + failure modes

--- a/docs/v0.2_steward_visibility.md
+++ b/docs/v0.2_steward_visibility.md
@@ -1,64 +1,48 @@
 # v0.2 – Steward Visibility
 
-v0.2 introduces visibility primitives for Decision Stewardship.
-The goal is not prediction. The goal is **early detection of boundary stress**.
+v0.2 adds “visibility muscle” for the Decision Steward.  
+The goal is not more bureaucracy — the goal is **fewer ambiguous approvals** and **faster review** under bounded authority.
+
+## Deliverables
 
 ## 1) Boundary Pressure Report
+A deterministic report generated from decision runs:
 
-### What it is
-A derived report that shows where the system repeatedly approaches governance boundaries.
+- most common out-of-bounds paths attempted
+- repeated forbidden touches (by path class)
+- which contracts are missing authority (under-specified can_write_paths)
+- which contracts are overly permissive (suspiciously broad authority)
 
-### Inputs
-- changed paths over time
-- bounded authority constraints
-- near-miss patterns (changes that repeatedly appear adjacent to forbidden areas)
-- repeated scope edits in contracts
-
-### Outputs
-- top pressured paths/domains (ranked)
-- scope expansion velocity (per decision_id)
-- “pressure hotspots” across the repo surface
-
-### Why it matters
-Most governance failures begin as “small, reasonable exceptions” that accumulate.
-Boundary pressure makes that accumulation visible early.
-
-### ML usage (optional, constrained)
-- clustering boundary-adjacent change patterns
-- anomaly detection on scope expansion velocity
-
-ML is advisory; enforcement remains deterministic.
+**Output target:**
+- `artifacts/reports/boundary_pressure.json`
+- `artifacts/reports/boundary_pressure.md`
 
 ## 2) Decision Debt Thresholds
+Introduce a minimal scoring model:
 
-### What it is
-A measurable debt signal derived from aging decisions and unvalidated assumptions.
+- debt signals: missing alternatives, weak success criteria, missing revocation, repeated warnings
+- thresholds: WARN at X, FAIL at Y (configurable)
 
-### Debt signals (examples)
-- decisions older than N days without reaffirmation
-- success criteria never observed or never evaluated
-- assumptions contradicted by new evidence references
+**Output target:**
+- `artifacts/reports/decision_debt.json`
+- surfaced in Decision Record
 
-### Outputs
-- decision debt score per domain
-- debt trendline over time
-- threshold-triggered review suggestions
+## 3) External Evidence References (no adapters)
+Contracts may reference external evidence sources without runtime coupling:
 
-### ML usage (optional)
-- survival analysis / hazard scoring for “time-to-invalidated”
-- prioritization ranking for review queue
-
-## 3) External Evidence References (No Adapters)
-
-### What it is
-A standardized way to reference external evidence without creating runtime coupling.
-
-### Examples
-- incident IDs
-- KPI dashboards URLs
+- incident IDs (e.g., INC-1234)
+- metric links (string references)
 - risk register IDs
-- cost guardrails references
 
-### Principle
-The control plane validates structure and falsifiability, not business logic.
-This keeps governance portable and audit-grade without integration sprawl.
+The gate validates:
+- structure exists
+- references are present
+- success criteria are falsifiable
+
+It does not fetch or integrate with external systems (by design).
+
+## Why this matters
+v0.2 turns the control plane from “pass/fail gate” into a **stewardship surface**:
+- it highlights where teams are pushing boundaries
+- it makes risk visible before incidents
+- it reduces review latency by standardizing admissibility artifacts
